# cargo

# [[file:~/Workspace/Programming/gchemol-rs/gchemol-core/gchemol-core.note::*cargo][cargo:1]]
[package]
name = "gchemol-core"
version = "0.0.38"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Core chemical objects for gchemol"
homepage = "https://github.com/gchemol/gchemol-core"
repository = "https://github.com/gchemol/gchemol-core"
license = "MIT OR Apache-2.0"

[dependencies]
serde = {version="1", features = ["derive"]}
serde_json = "1"
bimap = { version = "0.4", features = ["serde"]}
vecfx = { version = "0.0.8", features = ["nalgebra"] }
gchemol-gut = "0.0.8"
gchemol-graph = "0.0.4"
gchemol-lattice = "0.0.5"

[dev-dependencies]
# cargo:1 ends here
