# [[file:gchemol-core.note::8ea3ce8a][8ea3ce8a]]
[package]
name = "gchemol-core"
version = "0.1.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Core chemical objects for gchemol"
homepage = "https://github.com/gchemol/gchemol-core"
repository = "https://github.com/gchemol/gchemol-core"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
serde = {version="1", features = ["derive"]}
serde_json = "1"
envy = "0.4"
bimap = { version = "0.6", features = ["serde"]}
vecfx = { version = "0.1.2", features = ["nalgebra"] }
gut = { version = "0.2", package="gchemol-gut" }
neighbors = { version = "0.1", package="gchemol-neighbors" }
gchemol-graph = "0.1.1"
gchemol-lattice = "0.1"

[dev-dependencies]
# for tests only
# gchemol = { version = "0.0.42" }

[features]
adhoc = ["gchemol-graph/adhoc"] # for adhoc hacking
# 8ea3ce8a ends here
